<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IGoOut</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_results">Search results</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_signup_hint">Username (at least 4 characters)</string>
    <string name="password_signup_hint">Password (at least 4 characters)</string>
    <string name="repeat_password">Repeat password</string>
    <string name="select_interests">Select interests</string>
    <string name="select_venues">Select venues</string>
    <string name="select_radius">Select radius</string>
    <string name="share">Share</string>
    <string name="events">EVENTS</string>
    <string name="comments">COMMENTS</string>
    <string name="start_time">Start time: %s</string>
    <string name="more_info">More info: %s</string>
    <string name="please_wait">Please wait...</string>
    <string name="rate">Rate</string>
    <string name="alert_me">Alert me</string>
    <string name="comment">Comment</string>
    <string name="comment_event">Comment on event</string>
    <string name="rate_event">Rate event</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="write_comment">Write your comment here...</string>
    <string name="event_rated_successfully">Event rated successfully!</string>
    <string name="comment_added_successfully">Comment added successfully!</string>
    <string name="location_name">Location name: %s</string>
    <string name="interests">Interests: %s</string>
    <string name="error_no_internet_connection">Please check your Internet connection</string>

    <string-array name="interests">
        <item>All</item>
        <item>Comedy</item>
        <item>Concert</item>
        <item>Dancers</item>
        <item>DJ</item>
        <item>Festival</item>
        <item>Foam party</item>
        <item>Food</item>
        <item>Free</item>
        <item>Happy Hour</item>
        <item>Hostesses</item>
        <item>Live Music</item>
        <item>Striptease</item>
    </string-array>
    <string-array name="venues">
        <item>All</item>
        <item>Bar</item>
        <item>Beer Garden</item>
        <item>Cafe</item>
        <item>Cocktail Bar</item>
        <item>Karaoke Bar</item>
        <item>Tavern</item>
        <item>Lounge Bar</item>
        <item>Nightclub</item>
        <item>Pub</item>
        <item>Strip Club</item>
        <item>Whisky Bar</item>
        <item>Wine Bar</item>
    </string-array>
    <string-array name="radius">
        <item>1KM</item>
        <item>5KM</item>
        <item>10KM</item>
        <item>25KM</item>
        <item>50KM</item>
        <item>> 50KM</item>
    </string-array>

    <!-- Error messages -->
    <string name="error_sign_in">Wrong username/password combination! Please repeat input.</string>
    <string name="error_user_exists">Username already in use! Please select a different one.</string>
    <string name="error_server_error">There was problem with server. Please try later.</string>
    <string name="error_passwords_dont_match">Password and repeated password do not match. Please check your input.</string>
    <string name="error_input_too_short">Username and password need to be at least 4 characters long. Please repeat your input.</string>
    <string name="error_no_locations_found">Unfortunately, there is no location that matches your search parameters. Please increase the Search radius or change search parameters.</string>
    <string name="error_already_rated">You already rated this event.</string>
    <string name="error_max_comments">3 comments per user are allowed for one event.</string>

</resources>