<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_signup_hint"
            android:padding="@dimen/padding_normal" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_signup_hint"
            android:inputType="textPassword"
            android:padding="@dimen/padding_normal" />

        <EditText
            android:id="@+id/sign_up_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_normal" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/sign_up" />
    </LinearLayout>

</ScrollView>